# Authentication-and-production-server

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
Meals/: admin.py  models.py
Meals/migrations/: 0001_initial.py
Mealsproject/: asgi.py  settings.py  urls.py  wsgi.py
